Refactor the container creation in `AbstractModel` and its subclasses (#8042)
Signed-off-by: Jakub Scholz <www@scholzj.com>